--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
                     </div>
                     <div class="col-lg-7 col-md-6">
                         <div class="section-header text-left">
-                            <p>Bienvenue à C.T.P.L</p>
-                            <h2>Spécialiste Depuis Plus de 15 ans</h2>
+                            <p>Bienvenue chez C.T.P.L</p>
+                            <h2>Spécialiste depuis plus de 40 ans</h2>
                         </div>
                         <div class="about-text">
                             <p>
@@ -233,7 +233,7 @@
                                 condimentum, viverra quis sem. Curabitur non nisl nec nisi scelerisque maximus. Aenean
                                 consectetur convallis porttitor. Aliquam interdum at lacus non blandit.
                             </p>
-                            <a class="btn" href="">En Savoir Plus</a>
+                            <a class="btn" href="about.html">En Savoir Plus</a>
                         </div>
                     </div>
                 </div>
