--- a/index.html
+++ b/index.html
@@ -137,8 +137,7 @@
                     <div class="carousel-caption">
                         <p class="animated fadeInRight">C.T.P.L</p>
                         <h1 class="animated fadeInLeft">La Garantie Du Résultat</h1>
-                        <a class="btn animated fadeInUp"
-                            href="https://htmlcodex.com/construction-company-website-">Demandez Votre Devis</a>
+                        <a class="btn animated fadeInUp" href="contact.html">Demandez Votre Devis</a>
                     </div>
                 </div>
 
@@ -147,7 +146,7 @@
                     <div class="carousel-caption">
                         <p class="animated fadeInRight">C.T.P.L</p>
                         <h1 class="animated fadeInLeft">La Garantie Du Résultat</h1>
-                        <a class="btn animated fadeInUp" href="#">Demandez Votre Devis</a>
+                        <a class="btn animated fadeInUp" href="contact.html">Demandez Votre Devis</a>
                     </div>
                 </div>
             </div>
