--- a/index.html
+++ b/index.html
@@ -830,7 +830,7 @@
         <!-- Contact Start -->
 
 
-        <div class="contact wow fadeInUp " data-wow-delay="0.1s">
+        <div id="contact" class="contact wow fadeInUp " data-wow-delay="0.1s">
             <div class="container">
                 <div class="section-header text-center">
                     <p>Formulaire de Contact</p>
@@ -999,6 +999,11 @@
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/counterup/counterup.min.js"></script>
     <script src="lib/slick/slick.min.js"></script>
+
+
+    <!-- contact form links -->
+    <script src="mail/jqBootstrapValidation.min.js"></script>
+    <script src="mail/contact.js"></script>
 
     <!--  Javascript -->
     <script src="js/main.js"></script>
